--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,8 +20,10 @@
     android:versionCode="1"
     android:versionName="0.1" >
 
+    <!-- 声明SDK的版本 --> 
     <uses-sdk android:minSdkVersion="14" />
 
+    <!-- 声明需要使用的权限：  -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
     <uses-permission android:name="android.permission.INTERNET" />
